k8s/apps/minecraft/cacaffichage/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynmap
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - cacaffichage.tdude.co
    secretName: cacaffichage-tdude-co-tls
  rules:
  - host: cacaffichage.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft
            port:
              name: bluemap
